--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
         body {
             background: #fdfdfd;
             font-family: 'Nanum Myeongjo', Arial, Helvetica, sans-serif;
-            color: rgb(120, 120, 120);
+            color: rgb(100, 20,30 );
             padding: 4rem;
             margin-bottom: calc(8rem * 0.4125 + 2rem);
         }
