--- a/style.css
+++ b/style.css
@@ -40,18 +40,12 @@
             left: 0;
             right: 0;
             margin: auto;
-            
+            background-image: url(logo.svg);
             width: 8rem;
             height: calc(8rem * 0.4125);
         }
         
-        .top-logo {
-            text-align: left;
-            position: fixed;
-            border: 100px;
-            margin: auto;
-        }
-
+        
         .your-wirte input {
             border: none;
             border-bottom: 1px solid rgba(160, 160, 160, 1);
